spilt guest and sign in

--- a/homepage/homepage_guest.html
+++ b/homepage/homepage_guest.html
@@ -52,12 +52,11 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
 
-              <li><a href="#">Upload new dialect</a></li>
-              <li><a href="#">My collection</a></li>
-              <li class="divider"></li>
+              <li><a href="#">Please log in to check more content</a></li>
+              <!-- <li class="divider"></li>
               <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">My collection</a></li> -->
+
             </ul>
           </li>
         </ul>
