--- a/uploadpage/upload.html
+++ b/uploadpage/upload.html
@@ -113,38 +113,31 @@
     </header>
 </div>
 
-      <div class="container py-5">
+      <div class="container">
 
         <!-- For demo purpose -->
-        <header class="text-white text-center">
-            <h1 class="display-4">Bootstrap image upload</h1>
-            <p class="lead mb-0">Build a simple image upload button using Bootstrap 4.</p>
-            <p class="mb-5 font-weight-light">Snippet by
-                <a href="https://bootstrapious.com" class="text-white">
-                    <u>Bootstrapious</u>
-                </a>
-            </p>
-            <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" class="mb-4">
-            <div class="imageform">
-                <form>
-                    <label for="myfile">Select an image:</label>
-                    <input type="file" id="myfile" name="myfile">
-                </form>
-            </div>
+        <header>
+                <div class="imageform">
+                    <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" class="mb-4">
+                    <form>
+                        <label for="myfile">Select an image:</label>
+                        <input type="file" id="myfile" name="myfile">
+                    </form>
+                </div>
 
-            <div class="pronounciation">
-                <form>
-                    <label for="voicefile">Select a voice file:</label>
-                    <input type="file" id="voicefile" name="voicefile">
-                </form>
-            </div>
+                <div class="pronounciation">
+                    <form>
+                        <label for="voicefile">Select a voice file:</label>
+                        <input type="file" id="voicefile" name="voicefile">
+                    </form>
+                </div>
 
-            <div class="spell">
-                <form>
-                    <label for="spelling">Spell the word:</label>
-                    <input type="text" id="spelling" name="spelling">
-                </form>
-            </div>
+                <div class="spell">
+                    <form>
+                        <label for="spelling">Spell the word:</label>
+                        <input type="text" id="spelling" name="spelling">
+                    </form>
+                </div>  
         </header>
     
     </div>
