--- a/uploadpage/upload.html
+++ b/uploadpage/upload.html
@@ -108,21 +108,21 @@
    
 <div class="forms">
    <header>
+    <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" class="mb-4"><br>
     <div class="imageform">
-        <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" class="mb-4">
         <form>
             <label for="myfile">Select an image:</label>
             <input type="file" id="myfile" name="myfile">
         </form>
     </div>
-
+    <br>
     <div class="pronounciation">
         <form>
             <label for="voicefile">Select a voice file:</label>
             <input type="file" id="voicefile" name="voicefile">
         </form>
     </div>
-
+    <br>
     <div class="spell">
         <form>
              <label for="spelling">Spell the word:</label>
