--- a/uploadpage/upload.html
+++ b/uploadpage/upload.html
@@ -149,30 +149,10 @@
     </div> 
     <br>
     <div>
-      <h3>Select Location of the Dialect</h3>
-      <br>
-      <!--The div element for the map -->
-      <div id="map"></div>
-      <script>
-  // Initialize and add the map
-    function initMap() {
-    // The location of Uluru
-    var uluru = {lat: -25.344, lng: 131.036};
-    // The map, centered at Uluru
-    var map = new google.maps.Map(
-        document.getElementById('map'), {zoom: 4, center: uluru});
-    // The marker, positioned at Uluru
-    var marker = new google.maps.Marker({position: uluru, map: map});
-  }
-      </script>
-      <!--Load the API from the specified URL
-      * The async attribute allows the browser to render the page while the API loads
-      * The key parameter will contain your own API key (which is not needed for this tutorial)
-      * The callback parameter executes the initMap() function
-      -->
-      <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIO2BHXVUvKscoFPXT4coHlhZs--LQwg0&callback=initMap">
-      </script>
+        <form>
+          <label for="city">City of Dialect:</label><br>
+          <input type="text" id="city" name="city">
+        </form>
     </div>
   </div>
 </div>
