add submit button

--- a/uploadpage/upload.html
+++ b/uploadpage/upload.html
@@ -112,7 +112,7 @@
     </header>
    
 <div class="forms">
-    <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" class="mb-4"><br>
+    <img src="https://res.cloudinary.com/mhmd/image/upload/v1564991372/image_pxlho1.svg" alt="" width="150" height="60" class="mb-4"><br>
     <div class="imageform">
         <form>
             <label for="myfile">Select an image:</label>
@@ -150,8 +150,9 @@
     <br>
     <div>
         <form>
-          <label for="city">City of Dialect:</label><br>
-          <input type="text" id="city" name="city">
+          <label for="city">Location of Dialect:</label><br>
+          <input type="text" id="city" name="city"> <br>
+          <input type="submit" id="submit" value="Submit">
         </form>
     </div>
   </div>
