--- a/homepage/homepage_login.html
+++ b/homepage/homepage_login.html
@@ -148,9 +148,9 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-primary">
-        <div class="panel-heading">Sorry</div>
-        <div class="panel-body"><img src="https://thumbs.dreamstime.com/b/emoticon-sorry-sign-sad-apologizing-holding-text-147806315.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">You need to login to see more content</div>
+        <div class="panel-heading">Orange</div>
+        <div class="panel-body"><img src="https://previews.123rf.com/images/utima/utima1311/utima131100146/24077398-orange-fruit-isolated-on-white-background.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
+        <div class="panel-footer">click to hear the pronunciation</div>
       </div>
     </div>
     <!-- <div class="col-sm-4">
