fix bug in indexpage

--- a/md2_word/html/index.html
+++ b/md2_word/html/index.html
@@ -128,9 +128,8 @@
               </p>
             </div>
           </div>
-        </div>
-          
-        <div class="tab-pane active" id="secondtab">
+          </div>
+        <div class="tab-pane" id="secondtab">
           <div class="justify-content-center align-items-center">
             <header>
               <h2>Updated/Modified the word</h2>
@@ -166,7 +165,7 @@
           <button onclick="wordUpdate()" class="btn btn-primary">Submit</button>
           <header>Output:</header>
           <div class="col">
-            <p id="output" style="font-size: xx-large;">
+            <p id="output_update" style="font-size: xx-large;">
               <small style="font-size: small;"></small>
             </p>
           </div>
@@ -187,7 +186,7 @@
             <button onclick="wordDelete()" class="btn btn-primary">Submit</button>
             <header>Output:</header>
             <div class="col">
-              <p id="output" style="font-size: xx-large;">
+              <p id="output_delete" style="font-size: xx-large;">
                 <small style="font-size: small;"></small>
               </p>
             </div>
@@ -208,7 +207,7 @@
             <button onclick="wordRead()" class="btn btn-primary">Submit</button>
             <header>Output:</header>
             <div class="col">
-              <p id="output" style="font-size: xx-large;">
+              <p id="output_get" style="font-size: xx-large;">
                 <small style="font-size: small;"></small>
               </p>
             </div>
