--- a/md2_word/html/index.html
+++ b/md2_word/html/index.html
@@ -92,7 +92,9 @@
             <form class="md-form">
               <div class="file-field">
                 <div class="z-depth-1-half mb-4">
+                  <p id='word_img'>
                   <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"  style="size:50%"class="img-fluid" alt="example placeholder">
+                  </p>
                 </div>
               </div>
                 <div class="d-flex justify-content-center">
@@ -108,18 +110,28 @@
               </div>
               <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id = "word">
             </div>
+
+            <div class="input-group input-group-sm ">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-sm">image</span>
+              </div>
+              <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id = "img">
+            </div>
+
             <div class="input-group input-group-sm ">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-sm">languages</span>
               </div>
               <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id = "languages">
             </div>
+
             <div class="input-group input-group-sm ">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-sm">definition</span>
               </div>
               <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id = "definition">
             </div>
+
             <button onclick="wordCreate()" class="btn btn-primary">Submit</button>
             <header>Create Output:</header>
             <div class="col">
@@ -209,6 +221,9 @@
             <header>Read Output:</header>
             <div class="col">
               <p id="output_get" style="font-size: xx-large;">
+                <small style="font-size: small;"></small>
+              </p>
+              <p id="output_get_img" style="font-size: xx-large;">
                 <small style="font-size: small;"></small>
               </p>
             </div>
