milestone2.md created

--- a/md2_word/html/index.html
+++ b/md2_word/html/index.html
@@ -100,13 +100,13 @@
                   <img src="https://mdbootstrap.com/img/Photos/Others/placeholder.jpg"  style="size:50%"class="img-fluid" alt="example placeholder">
                   </p>
                 </div>
-              </div>
+              <!--</div>
                 <div class="d-flex justify-content-center">
                   <label for='wordimg'>Upload img</label>
                   <div class="btn btn-mdb-color btn-rounded float-left">
                       <input type="file" id='image' name='wordimg'>
                   </div>
-                </div>
+                </div>-->
             </form>
             <div class="input-group input-group-sm ">
               <div class="input-group-prepend">
