--- a/md3-login/html/index.html
+++ b/md3-login/html/index.html
@@ -34,8 +34,8 @@
                 Info
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/word">Upload new word</a>
-                <a class="dropdown-item" href="/ui">My collection</a>
+                <a class="dropdown-item" onclick="javascript: window.location.href ='word.html'">Upload new dialect</a>
+                <a class="dropdown-item" href="ul">My collection</a>
               </div>
             </li>
           </ul>
@@ -68,7 +68,7 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changeinfoModal">changeinfo</button>
               </a>
               <a class="dropdown-item">
-                <button type="button" class="btn btn-primary" data-toggle="modal">Logout</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" onclick="javascript:location.reload();">Logout</button>
               </a>
             </div>
           </li>
