fixed some bugs

--- a/md3-login/html/wordPage.html
+++ b/md3-login/html/wordPage.html
@@ -33,17 +33,16 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <a class="navbar-brand" href="http://localhost:8080/">Home</a>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
 
-              <li><a href="#">Upload new dialect</a></li>
-              <li><a href="#">My collection</a></li>
+              <li><a class="dropdown-item" onclick="javascript: window.location.href ='word.html'">Upload new word</a></li>
+              <li><a class="dropdown-item" href="ul">My collection</a></li>
               <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+
             </ul>
           </li>
         </ul>
