--- a/md3-login/html/index.html
+++ b/md3-login/html/index.html
@@ -22,7 +22,7 @@
           
       </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost:8080/">Home</a>
+        <a class="navbar-brand" href="https://frozen-castle-51130.herokuapp.com/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
