--- a/md3-login/html/wordPage.html
+++ b/md3-login/html/wordPage.html
@@ -33,7 +33,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <a class="navbar-brand" href="http://localhost:8080/">Home</a>
+          <a class="navbar-brand" href="https://frozen-castle-51130.herokuapp.com/">Home</a>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Info <span class="caret"></span></a>
