--- a/md3-login/html/upload.html
+++ b/md3-login/html/upload.html
@@ -30,6 +30,7 @@
     </body>
 
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
+        <a class="navbar-brand" href="https://frozen-castle-51130.herokuapp.com/">Home</a>
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
