add a search function to main page

--- a/final-user/html/index.html
+++ b/final-user/html/index.html
@@ -50,8 +50,8 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-2">
-            <input class="form-control mr-sm-4" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <input class="form-control mr-sm-4" type="search" placeholder="Search" aria-label="Search" id="searchbar">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick=client.search()>Search</button>
           </form>
           
           <!-- user login page -->
