--- a/final-user/html/index.html
+++ b/final-user/html/index.html
@@ -49,10 +49,10 @@
               </div>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-2">
+          <div class="form-inline my-2 my-lg-2">
             <input class="form-control mr-sm-4" type="search" placeholder="Search" aria-label="Search" id="searchbar">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick=client.search()>Search</button>
-          </form>
+          </div>
           
           <!-- user login page -->
           <ul class="navbar-nav ">
