--- a/html/wordPage.html
+++ b/html/wordPage.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet"  type="text/css" href="wordPage.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script src="word-ori.js"></script>
+        <script src="word-main.js"></script>
         <style>  
         </style>
       </head>
@@ -50,7 +50,7 @@
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search" id="searchBar">
           </div>
-          <button type="submit" class="btn btn-default" onclick="search()">Submit</button>
+          <button type="submit" class="btn btn-default" onclick="client.search()">Submit</button>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><p class="navbar-text">Already have an account?</p></li>
@@ -99,14 +99,14 @@
             <label for="language">Choose your language</label>
             <select id= "language" class="selectpicker">
             </select>
-            <button type="button" id="selectDef" onclick="defRead()" class="btn btn-primary">Go</button>
+            <button type="button" id="selectDef" onclick="client.defRead()" class="btn btn-primary">Go</button>
 
             <p id="test" style="font-size: xx-large;">
               Loading...
               <small style="font-size: small;"></small>
             </p>
             <p class='definition' id = 'definition'>Please select your language first</p>
-            <button type="button" id="editExplaination" onclick="showDefBar()" class="btn btn-primary">Click to Add More Definition</button><br/>
+            <button type="button" id="editExplaination" onclick="client.showDefBar()" class="btn btn-primary">Click to Add More Definition</button><br/>
             <div id="defBar" > 
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-sm">Language</span>
@@ -116,7 +116,7 @@
                 <span class="input-group-text" id="inputGroup-sizing-sm">Definition</span>
               </div>
               <textarea type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" id = add_def></textarea><br/>
-              <button type="button" id="addDefinition" onclick="addDef()" class="btn btn-primary">Submit</button>
+              <button type="button" id="addDefinition" onclick="client.addDef()" class="btn btn-primary">Submit</button>
               <p id = "updateStatus"></p>
             </div>
             </div>
@@ -125,7 +125,7 @@
       <div id = "data" class="right">
             <div class="container-fluid"> 
                 <div class="container-fluid"> 
-                    <button type="button" onclick="goToPronunPage()" class="btn-link">Upload your dialect!</button>
+                    <button type="button" onclick="client.goToPronunPage()" class="btn-link">Upload your dialect!</button>
                 </div>
                 <div id="pronunciationBlocks">
                 
