ts to js client

--- a/html/upload.html
+++ b/html/upload.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="upload.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-        <script src="upload.js"></script>
+        <script src="upload-main.js"></script>
 
         <style>
             header, div.forms
@@ -128,7 +128,7 @@
             <label for="city">Loation of your Dialect:</label><br>
             <input type="text" class="form-control" aria-label="Small" id="city"><br/>
         </div>
-        <button type="button" onclick="uploadPronun()" class="btn btn-primary">Submit</button>
+        <button type="button" onclick="client.uploadPronun()" class="btn btn-primary">Submit</button>
         <header>Output:</header>
             <div>
                 <p id="output" style="font-size: xx-large;">
